# nixl-uccl

./: meson_options.txt  sync_repo.sh
examples/python/: blocking_send_recv_example.py  system_comparison_plot.py
src/api/python/: _api.py
src/plugins/: meson.build
src/plugins/uccl/: README.md  meson.build  uccl_backend.cpp  uccl_backend.h  uccl_plugin.cpp
src/utils/: meson.build
test/gtest/: plugin_manager.cpp
test/gtest/plugins/: meson.build
test/gtest/plugins/uccl/: meson.build  uccl_test.cpp
test/unit/plugins/uccl/: meson.build  uccl_backend_test.cpp
